# tack-rust

./: Cargo.toml  dagger.cue
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: setup.sh
src/: app.rs  main.rs
src/client/: mod.rs
